@@ -38,10 +38,10 @@ Desarrollar una aplicación que optimice el proceso de adopción, permitiendo un
 ---
 
 ## 🧑‍💻 Tecnologías utilizadas
-- **Lenguaje:** Java
-- **Frontend:** JavaFX
-- **Backend:** Java
-- **Base de datos:** MySQL
+- Lenguaje: Java
+- Frontend: JavaFX
+- Backend: Java
+- Base de datos: MySQL
 
 ---
 
@@ -49,10 +49,71 @@ Desarrollar una aplicación que optimice el proceso de adopción, permitiendo un
 
 El sistema está organizado siguiendo una estructura modular basada en capas:
 
-- **Modelo (Model):** Representa las entidades del sistema (Mascota, Refugio, Adoptante, Solicitud).
-- **Vista (View):** Interfaces gráficas desarrolladas en JavaFX (FXML + CSS).
-- **Controlador (Controller):** Maneja la lógica de interacción entre la vista y el modelo.
+- Modelo (Model): Representa las entidades del sistema (Mascota, Refugio, Adoptante, Solicitud).
+- Vista (View): Interfaces gráficas desarrolladas en JavaFX (FXML + CSS).
+- Controlador (Controller): Maneja la lógica de interacción entre la vista y el modelo.
 
 ---
 
 ## 🗂️ Estructura del proyecto
+
+plataformaAdopciones/
+│
+├── src/
+│   └── main/
+│       ├── java/
+│       │   └── com/adopcion/
+│       │       ├── controller/
+│       │       ├── model/
+│       │       └── app/
+│       │
+│       └── resources/
+│           ├── fxml/
+│           └── css/
+│
+├── out/
+├── README.md
+
+---
+
+## 🚀 Ejecución del proyecto
+
+1. Clonar repositorio
+git clone https://github.com/isaizurita/plataformaAdopciones.git
+cd plataformaAdopciones
+
+2. Compilar
+Asegúrate de tener Java y JavaFX configurados.
+
+javac --module-path /ruta/javafx/lib --add-modules javafx.controls,javafx.fxml -d out $(find src/main/java -name "*.java")
+
+3. Ejecutar
+
+java --module-path /ruta/javafx/lib --add-modules javafx.controls,javafx.fxml -cp out com.adopcion.app.Main
+
+---
+
+## 🖼️ Interfaz del sistema
+
+El sistema cuenta con una interfaz gráfica amigable desarrollada en JavaFX, organizada en módulos principales:
+
+- Refugios
+- Mascotas
+- Adoptantes
+- Solicitudes
+
+---
+
+## 👨‍👩‍👧‍👦 Equipo de desarrollo
+
+- Isaí Obed Zurita Prado
+- Jorge Eduardo Carrillo Lozano
+- Díaz Soto Alexis
+- Mariana Rangel Angeles
+
+---
+
+## 📌 Notas adicionales
+- El sistema está diseñado bajo un enfoque modular para facilitar su escalabilidad.
+- Se recomienda el uso de Java 17 o superior.
+- Es necesario configurar correctamente JavaFX para la ejecución.
